Update backstage catalog entities to use new API identifier.

--- a/backstage/tracks-1.0-catalog-info.yaml
+++ b/backstage/tracks-1.0-catalog-info.yaml
@@ -11,4 +11,4 @@ spec:
   lifecycle: production
   owner: group:track-managers
   providesApis:
-    - default/catstronauts-1.0
+    - default/485f70db-0cb6-4a68-bebe-d7deef52680b
