--- a/portal/portal-frontend.yaml
+++ b/portal/portal-frontend.yaml
@@ -37,7 +37,9 @@ spec:
     spec:
       serviceAccountName: portal-frontend
       containers:
-      - image: djannot/portal-frontend:gg-teams-apps-demo-v2.2
+      - image: gcr.io/solo-public/docs/portal-frontend:latest
+        # image: djannot/portal-frontend:gg-teams-apps-demo-v2.2
+        # image: duncandoyle/portal-frontend:gg-demo-custompages-v1.0.4
         args: ["--host", "0.0.0.0"]
         imagePullPolicy: Always
         name: portal-frontend
@@ -50,9 +52,25 @@ spec:
         env:
         - name: VITE_PORTAL_SERVER_URL
           value: "http://developer.example.com/v1"
+        # - name: "VITE_CLIENT_ID"
+        #   value: "portal-client"
+        # - name: "VITE_TOKEN_ENDPOINT"
+        #   value: "http://keycloak.example.com/realms/gloo-demo/protocol/openid-connect/token"
+        # - name: "VITE_AUTH_ENDPOINT"
+        #   value: "http://keycloak.example.com/realms/gloo-demo/protocol/openid-connect/auth"
+        # - name: "VITE_LOGOUT_ENDPOINT"
+        #   value: "http://keycloak.example.com/realms/gloo-demo/protocol/openid-connect/logout"
+        # - name: VITE_SWAGGER_PREFILL_API_KEY
+        #   value: '["bearerAuth","{{USER_TOKEN}}"]'
+        # - name: VITE_CUSTOM_PAGES
+        #   value: '[{"title": "Markdown Example", "path": "/pages/markdown-example.md"}, {"title": "HTML Example", "path": "/pages/html-example.html"}, {"title": "Knapsack Problem", "path": "/pages/knapsack.md"}]' 
+          # value: '[{"title": "Knapsack Problem", "path": "/pages/knapsack.md"}]'
+        # ----------------------------------------
         - name: VITE_APPLIED_OIDC_AUTH_CODE_CONFIG
           value: "true"
         - name: VITE_OIDC_AUTH_CODE_CONFIG_CALLBACK_PATH
           value: "/v1/login"
         - name: VITE_OIDC_AUTH_CODE_CONFIG_LOGOUT_PATH
           value: "/v1/logout"
+        # - name: VITE_SWAGGER_PREFILL_API_KEY
+        #   value: '["bearerAuth","{{USER_TOKEN}}"]'
