--- a/apiproducts/httpbin/httpbin-apiproduct-httproute.yaml
+++ b/apiproducts/httpbin/httpbin-apiproduct-httproute.yaml
@@ -14,6 +14,8 @@ spec:
           type: PathPrefix
           value: /
       filters:
+      # Need to specify the URLRewrite here. The URLRewrite set on the parent route, although correctly configured on the proxy,
+      # will prevent the APIDoc from being stitched by the Portal controller.
       - type: URLRewrite
         urlRewrite:
           path:
