--- a/apiproducts/tracks/tracks-apiproduct.yaml
+++ b/apiproducts/tracks/tracks-apiproduct.yaml
@@ -7,7 +7,7 @@ metadata:
   name: tracks
   namespace: tracks
 spec:
-  id: Catstronauts
+  id: catstronauts
   displayName: Catstronauts REST API
   customMetadata:
     image: <url>
@@ -34,7 +34,7 @@ spec:
 
           This Catstronauts REST API License ("License") is a legal agreement between you (either an individual or a legal entity) and solo.io ("Provider") for the use of the Catstronauts REST API ("API").
       customMetadata:
-        phase: supported`
+        phase: supported
     - apiVersion: "2.0"
       targetRefs:
         - name: tracks-v2-apiproduct
