--- a/apiproducts/tracks/tracks-v2-apiproduct-httproute.yaml
+++ b/apiproducts/tracks/tracks-v2-apiproduct-httproute.yaml
@@ -13,8 +13,9 @@ spec:
       - path:
           type: PathPrefix
           value: /
-        method: GET
       filters:
+      # Need to specify the URLRewrite here. The URLRewrite set on the parent route, although correctly configured on the proxy,
+      # will prevent the APIDoc from being stitched by the Portal controller.
       - type: URLRewrite
         urlRewrite:
           path:
@@ -24,3 +25,42 @@ spec:
       - name: tracks-rest-api-1-0
         namespace: tracks
         port: 5000
+      # - group: gateway.networking.k8s.io
+      #   kind: HTTPRoute
+      #   name: tracks
+      #   namespace: tracks
+    # - matches:  
+    #   - path:
+    #       type: PathPrefix
+    #       value: /
+    #     # method: GET
+    #   filters:
+    #   - type: URLRewrite
+    #     urlRewrite:
+    #       path:
+    #         type: ReplacePrefixMatch
+    #         replacePrefixMatch: /
+    #   # backendRefs:
+    #   # - group: gateway.networking.k8s.io
+    #   #   kind: HTTPRoute
+    #   #   name: tracks
+    #   #   namespace: tracks
+    #   backendRefs:
+    #   - name: tracks-rest-api-1-0
+    #     namespace: tracks
+    #     port: 5000
+    # # - matches:  
+    # #   - path:
+    # #       type: PathPrefix
+    # #       value: /
+    # #     method: OPTIONS
+    # #   filters:
+    # #   - type: URLRewrite
+    # #     urlRewrite:
+    # #       path:
+    # #         type: ReplacePrefixMatch
+    # #         replacePrefixMatch: /
+    # #   backendRefs:
+    # #   - name: tracks-rest-api-1-0
+    # #     namespace: tracks
+    # #     port: 5000
