--- a/policies/routeoptions/routeoption-portal-apis.yaml
+++ b/policies/routeoptions/routeoption-portal-apis.yaml
@@ -11,7 +11,9 @@ spec:
       - '*'
       allowMethods:
       - GET
+      - POST
       - OPTIONS
+      - DELETE
       allowOrigin:
       - '*'
       # allowOriginRegex:
