--- a/portal/portal.yaml
+++ b/portal/portal.yaml
@@ -9,12 +9,14 @@ spec:
   # domains:
   #   - developer.example.com
   apiProducts:
-    - name: "*"
-      namespace: tracks
-    - name: httpbin
-      namespace: httpbin
-    # - name: petstore
-    #   namespace: petstore
+  - name: "*"
+    namespace: httpbin
+  - name: "*"
+    namespace: tracks
+  - name: "*"
+    namespace: petstore
+  - name: lambda
+    namespace: gloo-system
   # portalBackendSelectors:
   #   - selector:
   #       namespace: gloo-system
