Added Portal PostgreSQL deployment.

--- a/portal/portal.yaml
+++ b/portal/portal.yaml
@@ -17,6 +17,8 @@ spec:
     namespace: petstore
   - name: lambda
     namespace: gloo-system
+  - name: "*"
+    namespace: quarkus
   # portalBackendSelectors:
   #   - selector:
   #       namespace: gloo-system
