--- a/portal/portal-frontend.yaml
+++ b/portal/portal-frontend.yaml
@@ -38,6 +38,7 @@ spec:
       serviceAccountName: portal-frontend
       containers:
       - image: gcr.io/solo-public/docs/portal-frontend:latest
+        # image: gcr.io/solo-public/docs/portal-frontend:v0.1.2
         # image: djannot/portal-frontend:gg-teams-apps-demo-v2.2
         # image: duncandoyle/portal-frontend:gg-demo-custompages-v1.0.4
         args: ["--host", "0.0.0.0"]
