Fix postgresql version for keycloak to version that is compatible.

--- a/keycloak/keycloak-postgres.yaml
+++ b/keycloak/keycloak-postgres.yaml
@@ -30,7 +30,8 @@ spec:
         app: postgres
     spec:
       containers:
-      - image: postgres:latest
+      - image: postgres:17.6
+        # image: postgres:latest
         name: postgres
         envFrom:
           - secretRef:
