Changed id to lowercase to standardize across demo.

--- a/apiproducts/petstore/petstore-apiproduct.yaml
+++ b/apiproducts/petstore/petstore-apiproduct.yaml
@@ -7,7 +7,7 @@ metadata:
   name: petstore
   namespace: petstore
 spec:
-  id: Petstore
+  id: petstore
   displayName: Petstore REST API
   customMetadata:
     image: <url>
