Directly select petstore apiproduct based on name and namespace instead of wildcard.

--- a/portal/portal.yaml
+++ b/portal/portal.yaml
@@ -13,7 +13,7 @@ spec:
     namespace: httpbin
   - name: "*"
     namespace: tracks
-  - name: "*"
+  - name: petstore
     namespace: petstore
   - name: lambda
     namespace: gloo-system
